--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
     <title>My app</title>
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <app-header>Loading...</app-header>
+    <app-content>Loading...</app-content>
+    <app-footer>Loading...</app-footer>
   </body>
 </html>
