:sparkles: feat: adicionando bootstrap e h1 dinamicamente

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,16 @@
 <html>
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <title>My app</title>
   </head>
   <body>
-    <app-header>Loading...</app-header>
-    <app-content>Loading...</app-content>
-    <app-footer>Loading...</app-footer>
+    <app-root>Loading...</app-root>
   </body>
 </html>
